--- a/platform/playbooks/network_info.yml
+++ b/platform/playbooks/network_info.yml
@@ -1,7 +1,7 @@
 
 - hosts: localhost
   collections:
-  - qrkourier.netfoundry
+  - netfoundry.platform
   tasks:
   - name: Establish session and find Network resources
     netfoundry_info:
