--- a/platform/galaxy.yml
+++ b/platform/galaxy.yml
@@ -2,10 +2,10 @@
 # The namespace of the collection. This can be a company/brand/organization or product namespace under which all
 # content lives. May only contain alphanumeric lowercase characters and underscores. Namespaces cannot start with
 # underscores or numbers and cannot contain consecutive underscores
-namespace: qrkourier
+namespace: netfoundry
 
 # The name of the collection. Has the same character restrictions as 'namespace'
-name: netfoundry
+name: platform
 
 # The version of the collection. Must be compatible with semantic versioning
 version: 1.3.0
