--- a/platform/playbooks/services_from_csv.yml
+++ b/platform/playbooks/services_from_csv.yml
@@ -6,8 +6,8 @@
   tasks:
   - name: Establish session and discover Network
     netfoundry_info:
-      network: "{{ networkName }}"
-      credentials: "{{ credentialsJson }}" 
+      network: BibbidiBobbidiBoo
+      credentials: credentials.json
     register: netfoundry_info
 
   - name: Read Services from CSV file
@@ -29,6 +29,13 @@
       serverPortRange: "{{ item.port }}"
       serverProtocol: TCP
     loop: "{{ services.list }}"
+    register: services_loop
+
+  - name: print failed results
+    debug:
+      msg: "{{ item }}"
+    loop: "{{ services_loop.results }}"
+#    when: item.
 #    when: item.serviceNumber|int < 4
      
 #   - name: delete Services
@@ -38,7 +45,3 @@
 #       state: DELETED
 #     loop: "{{ services.list }}"
 #     when: item.serviceNumber|int > 3
-
-  vars:
-    networkName: BibbidiBobbidiBoo
-    credentialsJson: credentials.json # relative to playbook; documentation: https://developer.netfoundry.io/v2/guides/authentication/#get-an-api-account
