--- a/platform/playbooks/example_playbook.yml
+++ b/platform/playbooks/example_playbook.yml
@@ -7,6 +7,7 @@
     netfoundry_info:
       network: "{{ networkName }}"
       credentials: "{{ credentialsJson }}" 
+      inventory: True
     register: netfoundry_info
   - name: show Organization
     debug:
