--- a/platform/playbooks/example_playbook.yml
+++ b/platform/playbooks/example_playbook.yml
@@ -1,87 +1,84 @@
 
 - hosts: localhost
+
   collections:
   - netfoundry.platform
+
   tasks:
   - name: Establish session and find Network resources
     netfoundry_info:
-      network: "{{ networkName }}"
-      credentials: "{{ credentialsJson }}" 
-      inventory: True
+        network: BibbidiBobbidiBoo
+        credentials: credentials.json
     register: netfoundry_info
-  - name: show Organization
-    debug:
-      msg: "{{ netfoundry_info.organization }}"
-  - name: show Console URL
-    debug:
-      msg: "{{ netfoundry_info.console }}"
-  - name: list Existing Endpoint names
-    debug:
-      msg: "NAME: {{ item.name }}"
-    loop: "{{ netfoundry_info.endpoints }}"
-  - name: list Existing Edge Router names
-    debug:
-      msg: "NAME: {{ item.name }}"
-    loop: "{{ netfoundry_info.edge_routers }}"
+
   - name: declare Endpoints
     netfoundry_endpoint:
-      name: "{{ item }}"
-      network: "{{ netfoundry_info.network }}"
-      attributes:
-      - "#workFromAnywhere"
-      dest: /tmp/netfoundry                  # filename is Endpoint name if dest is a directory
-      #dest: /tmp/netfoundry/ott-{{item}}.jwt # custom filename if name is like *.jwt
-    loop: "{{ endpointNames }}"
+        name: "{{ item }}"
+        network: "{{ netfoundry_info.network }}"
+        attributes:
+        - "#workFromAnywhere"
+        dest: /tmp/netfoundry                  # filename is Endpoint name if dest is a directory
+        #dest: /tmp/netfoundry/ott-{{item}}.jwt # custom filename if name is like *.jwt
+    loop:
+    - Client1
+    - Exit1
     register: endpoints
-  - name: print results for changed Endpoints
-    debug:
-      var: item.message
-    loop: "{{endpoints.results}}"
-    when: item.changed
-
-  # - name: Delete all Endpoints
-  #   netfoundry_endpoint:
-  #     name: "{{ item }}"
-  #     state: DELETED
-  #     network: "{{ netfoundry_info.network }}"
-  #   loop: "{{ netfoundry_info.endpoints|map(attribute='name')|list }}"
 
   - name: declare an Endpoint-hosted Service
     netfoundry_service:
-      network: "{{ netfoundry_info.network }}"
-      name: HTTP Echo 1
-      endpoints: 
-      - Exit1
-      attributes: 
-      - "#welcomeWagon"
-      clientHostName: echo1.netfoundry
-      clientPortRange: 80
-      serverHostName: eth0.me
-      serverPortRange: 80
-      serverProtocol: TCP
+        network: "{{ netfoundry_info.network }}"
+        name: HTTP Echo 1
+        endpoints: 
+        - Exit1
+        attributes: 
+        - "#welcomeWagon"
+        clientHostName: echo-exit.netfoundry
+        clientPortRange: 80
+        serverHostName: eth0.me
+        serverPortRange: 80
+        serverProtocol: TCP
+
+  - name: declare a NetFoundry-datacenter-hosted Edge Router
+    netfoundry_router:
+        network: "{{ netfoundry_info.network }}"
+        name: Oregon Router
+        attributes: 
+        - "#defaultRouters"
+        datacenter: us-west-2
+    register: hosted_router
+
+  - name: declare a blanket Edge Router Policy
+    netfoundry_router_policy:
+        network: "{{ netfoundry_info.network }}"
+        name: defaultRouters
+        routers:
+        - "#defaultRouters"
+        endpoints:
+        - "#all"
+    register: blanket_policy
 
   - name: declare a Router-hosted Service
     netfoundry_service:
-      network: "{{ netfoundry_info.network }}"
-      name: HTTP Echo 2
-      attributes: 
-      - "#welcomeWagon"
-      clientHostName: echo2.netfoundry
-      clientPortRange: 80
-      egressRouter: "{{ netfoundry_info.edge_routers.0.name }}"
-      serverHostName: eth0.me
-      serverPortRange: 80
-      serverProtocol: TCP
+        network: "{{ netfoundry_info.network }}"
+        name: HTTP Echo 2
+        attributes: 
+        - "#welcomeWagon"
+        clientHostName: echo2.netfoundry
+        clientPortRange: 80
+        egressRouter: "{{ hosted_router.message.id }}"
+        serverHostName: eth0.me
+        serverPortRange: 80
+        serverProtocol: TCP
 
-  - name: delete a Service
-    netfoundry_service:
-      network: "{{ netfoundry_info.network }}"
-      name: HTTPEcho3
-      state: DELETED
+  - name: declare an AppWAN
+    netfoundry_appwan:
+        network: "{{ netfoundry_info.network }}"
+        name: Welcome
+        endpoints:
+        - "#workFromAnywhere"
+        services:
+        - "#welcomeWagon"
+    
+    
 
-  vars:
-    networkName: BibbidiBobbidiBoo
-    credentialsJson: credentials.json # relative to playbook; documentation: https://developer.netfoundry.io/v2/guides/authentication/#get-an-api-account
-    endpointNames:
-    - Client1
-    - Exit1
+
