--- a/platform/playbooks/services_from_csv.yml
+++ b/platform/playbooks/services_from_csv.yml
@@ -26,7 +26,7 @@
       clientPortRange: "{{ item.port }}"
       egressRouter: "{{ item.edgeRouterId }}"
       serverHostName: "{{ item.ipAddress }}"
-      serverPortRange: "{{ item.port }}"
+      serverPort: "{{ item.port }}"
       serverProtocol: TCP
     loop: "{{ services.list }}"
     register: services_loop
