queue the tombstone for 2.0.0

--- a/platform/meta/runtime.yml
+++ b/platform/meta/runtime.yml
@@ -2,11 +2,13 @@ plugin_routing:
     modules:
         netfoundry_service:
             redirect: netfoundry.platform.netfoundry_service_simple
+#            tombstone:
             deprecation:
                 removal_version: 2.0.0
                 warning_text: Use netfoundry_service_simple instead.
         netfoundry_endpoint_service:
             redirect: netfoundry.platform.netfoundry_service_advanced
+#            tombstone:
             deprecation:
                 removal_version: 2.0.0
                 warning_text: Use netfoundry_service_advanced instead.
