--- a/platform/roles/netfoundry-network/defaults/main.yml
+++ b/platform/roles/netfoundry-network/defaults/main.yml
@@ -1,2 +1,16 @@
 ---
 # defaults file for netfoundry-network
+
+network_size: small
+network_datacenter: us-east-1
+network_version: default # "default" (i.e. stable) or "latest" (i.e. experimental) or "7.3.23" (specific product version) 
+netfoundry_credentials: credentials.json
+netfoundry_identity_organization: null
+netfoundry_network_group: null
+
+wait_seconds: 60                                            # minimum timeout
+network_wait:  "{{ wait_seconds|int*30 }}"                  # create network timeout seconds
+router_wait:   "{{ wait_seconds|int*15 }}"                  # create router timeout seconds
+endpoint_wait: "{{ wait_seconds|int*5 }}"                   # create endpoint timeout seconds
+enroll_wait:   "{{ (wait_seconds|int/2)|round|int }}"       # enroll endpoint timeout seconds
+service_wait:  "{{ (wait_seconds|int*10)|round|int }}"      # create service timeout seconds
